--- a/static/style2.css
+++ b/static/style2.css
@@ -26,9 +26,9 @@ body {
   
   nav > ul > li {
     display: inline-block;
-      font-size: 14px;
-      padding: 0 15px;
-      position: relative;
+      font-size: 25px;
+      padding: 0 120px;
+      position:relative;
   }
   
   nav > ul > li > a {
@@ -45,7 +45,7 @@ body {
   }
   
   .mega-menu {
-    background: #eee;
+    background: rgb(188,203,193);
       visibility: hidden;
       opacity: 0;
       transition: visibility 0s, opacity 0.5s linear;
