--- a/static/Layout2/style2.css
+++ b/static/Layout2/style2.css
@@ -1,8 +1,11 @@
 body {
-    margin: 0;
-    padding: 0;
+    
     font-family: sans-serif;
-    background: linear-gradient(-200deg, #51ff8e, #097f23, #023514);}
+    background-image: url(./img/and.png);
+    background-repeat: no-repeat;
+    background-size: 103vmax 
+    
+  }
   
   a {text-decoration: none;}
   
