--- a/templates/lista.html
+++ b/templates/lista.html
@@ -14,5 +14,6 @@
                 </h1> 
             </table>
         </div>
+        <a href="/static/index2.html">Voltar</a>
     </body>
 </html>
