Adicionado estilo a lista.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -13,6 +13,12 @@ body {
     border-radius: 0.5em;
 }
 
+table {
+    background-color:#fdfffe;
+    border-collapse:collapse;
+    border: 1px solid gray;
+
+}
 .credit a {
     color: #097f23;
     transition: 1s;
