Adicionei fundo branco no carrinho e fechar venda

--- a/templates/carrinho.html
+++ b/templates/carrinho.html
@@ -2,7 +2,8 @@
 
 <html lang="en">
     <head>
-        <title> Table </title>              
+        <title> Table </title>
+        <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}"/>              
     </head>
     <body>
         <div align="center">
